  (Francisco Doubrawa Filho)
- Dots drawn for PUPDPU sequences were not clipped by IW
- Unsupported subtypes 6 and 7 of SD and AD (weight & typeface)
  caused an error exit instead of simply being ignored
- extremely short line segments could confuse the pattern state machine,
  resulting in no or extraneous lines being drawn (J.L. Fernandez Jambrina)

Changes from 3.4.1 to 3.4.2

- Added support for the AC (fill pattern anchor corner) command
- Added support for the CT (chord tolerance) command
- Added color support in SVG output mode
- Added output module for JPG images (requires libjpeg)

Bug fixes:

- SVG output mode could not be selected on the commandline
- PDF and EPS modes were not always generating penwidth commands on pen changes
- Polygon mode was influencing the overall pen up/down state
- PM1 immediately after PM was not setting the new starting point correctly
- FT instructions did not store/recall hatch spacing and angle correctly
- X11 preview always used black for pen 1
- Polygon fill algorithm did not handle parallel bounding lines correctly,
  and could draw lines beyond the limits of the polygon in some cases.
- the commandline interpreter now handles mis-spelled or unknown long
  options gracefully (Serge Ivanchenko)
- PDF output was only about 1/3 the intended size
- handling of RO/IW was broken (again) for the unscaled case (no SC)
- PNG output was still using a fixed eight pen palette
- raster modes were limited to 15 pens due to restrictions of the internal
  picture buffer (higher pen numbers were either mapped to black or scaled
  to the accessible range, depending on output format)
- DXF output had leading whitespace in layer numbers (Patrice Pinel)
- EPS output still had oversized margins

Changes from 3.4.0 to 3.4.1

- Scale penwidths in raster modes to resolve the metric/pixelcount
  controversy in interpretation of the pen widths. (Gerhard Buergmann)
- Added support for BR and BZ (cubic bezier curves)